[gd_scene load_steps=37 format=3 uid="uid://bl7cbq2ma5mjj"]

[ext_resource type="Script" uid="uid://b4xqkm8dmmdgk" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Script" uid="uid://2i8vukneqwu1" path="res://player_stats.gd" id="2_1jxqw"]
[ext_resource type="Material" uid="uid://dx10wnlxgh3sb" path="res://effects_material.tres" id="2_2hs0m"]
[ext_resource type="Texture2D" uid="uid://ctx0v1ampqc8a" path="res://ninja_upper.png" id="2_hqtel"]
[ext_resource type="Texture2D" uid="uid://bch8duwf6eai4" path="res://ninja_lower.png" id="3_sweqy"]
[ext_resource type="Script" uid="uid://cqxr3go31xf5c" path="res://hitbox.gd" id="4_hqtel"]
[ext_resource type="Script" uid="uid://qjrnpv4tbvkp" path="res://hurtbox.gd" id="5_sweqy"]
[ext_resource type="AudioStream" uid="uid://bvkb63cwyd0ca" path="res://dash.wav" id="8_b26j0"]
[ext_resource type="AudioStream" uid="uid://bnkeqe3gqh3x7" path="res://jump.wav" id="8_dw050"]
[ext_resource type="AudioStream" uid="uid://b1psmyy57hppb" path="res://hitHurt.wav" id="8_n7ghd"]
[ext_resource type="AudioStream" uid="uid://crq5olvkleox0" path="res://Slash.wav" id="11_nvl01"]

[sub_resource type="Resource" id="Resource_dw050"]
resource_local_to_scene = true
script = ExtResource("2_1jxqw")
health = 3
metadata/_custom_type_script = "uid://2i8vukneqwu1"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hs0m"]
size = Vector2(8, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqk2v"]
size = Vector2(12, 20)

[sub_resource type="Animation" id="Animation_1jxqw"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/Hitbox/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_pbfsw"]
resource_name = "attack_down"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/Hitbox/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [PackedVector2Array(4, -1, 3, 4, -1, 9, -4, 9, -7, 4, -9, -2, -10, 8, -8, 16, -5, 20, -1, 20, 3, 14, 5, 7), PackedVector2Array(4, -1, 4, 11, 6, 8, 6, -1), PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_5tmop"]
resource_name = "attack_down_right"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/Hitbox/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [PackedVector2Array(6, -9, 12, -1, 15, 4, 15, 7, 10, 9, 3, 7, 10, 13, 16, 17, 20, 17, 23, 14, 23, 10, 17, 0, 10, -8), PackedVector2Array(6, -9, 18, 4, 16, -1, 10, -7), PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "attack_right"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/Hitbox/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [PackedVector2Array(8, -10, 19, -10, 28, -13, 30, -15, 30, -19, 28, -21, 21, -24, 7, -26, 1, -24, 13, -22, 19, -19, 19, -16, 12, -12), PackedVector2Array(1, -25, 19, -25, 19, -26, 16, -27, 4, -27, 1, -26), PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_q13i1"]
resource_name = "attack_up"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/Hitbox/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.10162541, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-3, -25, 0, -35, 3, -40, 7, -40, 9, -37, 12, -30, 12, -41, 8, -52, 3, -52, -1, -46, -3, -38), PackedVector2Array(-3, -25, -3, -43, -5, -40, -5, -29), PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_pylmc"]
resource_name = "attack_up_right"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/Hitbox/CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [PackedVector2Array(-2, -26, 3, -34, 12, -41, 20, -42, 25, -38, 25, -34, 20, -29, 20, -33, 14, -35, 6, -32), PackedVector2Array(-2, -26, 9, -36, 5, -35, 0, -30), PackedVector2Array()]
}

[sub_resource type="Animation" id="Animation_urp6f"]
resource_name = "climb"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 11]
}

[sub_resource type="Animation" id="Animation_ivps1"]
resource_name = "hang"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_b26j0"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_dw050"]
resource_name = "stand"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b26j0"]
_data = {
&"RESET": SubResource("Animation_1jxqw"),
&"attack_down": SubResource("Animation_pbfsw"),
&"attack_down_right": SubResource("Animation_5tmop"),
&"attack_right": SubResource("Animation_nvl01"),
&"attack_up": SubResource("Animation_q13i1"),
&"attack_up_right": SubResource("Animation_pylmc"),
&"climb": SubResource("Animation_urp6f"),
&"hang": SubResource("Animation_ivps1"),
&"jump": SubResource("Animation_b26j0"),
&"run": SubResource("Animation_2hs0m"),
&"stand": SubResource("Animation_dw050")
}

[sub_resource type="Animation" id="Animation_hqtel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_606se"]
resource_name = "climb"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 11]
}

[sub_resource type="Animation" id="Animation_bwjto"]
resource_name = "hang"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_n7ghd"]
resource_name = "jump"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "stand"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteLower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sweqy"]
_data = {
&"RESET": SubResource("Animation_hqtel"),
&"climb": SubResource("Animation_606se"),
&"hang": SubResource("Animation_bwjto"),
&"jump": SubResource("Animation_n7ghd"),
&"run": SubResource("Animation_i3pqv"),
&"stand": SubResource("Animation_sweqy")
}

[sub_resource type="Animation" id="Animation_op7ga"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:material:shader_parameter/flash_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/SpriteLower:material:shader_parameter/flash_enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Anchor/Hurtbox:is_invincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u1c27"]
resource_name = "hitflash"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor/SpriteUpper:material:shader_parameter/flash_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/SpriteLower:material:shader_parameter/flash_enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Anchor/Hurtbox:is_invincible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_op7ga"]
_data = {
&"RESET": SubResource("Animation_op7ga"),
&"hitflash": SubResource("Animation_u1c27")
}

[node name="Player" type="CharacterBody2D"]
z_index = 50
script = ExtResource("1_i3pqv")
stats = SubResource("Resource_dw050")
state = 0

[node name="Anchor" type="Node2D" parent="."]

[node name="SpriteUpper" type="Sprite2D" parent="Anchor"]
z_index = 1
material = ExtResource("2_2hs0m")
position = Vector2(-2, -13)
texture = ExtResource("2_hqtel")
offset = Vector2(16, 0)
hframes = 27

[node name="SpriteLower" type="Sprite2D" parent="Anchor"]
material = ExtResource("2_2hs0m")
position = Vector2(-2, -13)
texture = ExtResource("3_sweqy")
offset = Vector2(16, 0)
hframes = 15
frame = 6

[node name="RayCastUpper" type="RayCast2D" parent="Anchor"]
position = Vector2(5, -14)
target_position = Vector2(5, 0)
collision_mask = 2

[node name="RayCastLower" type="RayCast2D" parent="Anchor"]
position = Vector2(5, -5)
target_position = Vector2(5, 0)
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="Anchor"]
collision_layer = 0
collision_mask = 8
script = ExtResource("4_hqtel")
metadata/_custom_type_script = "uid://cqxr3go31xf5c"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Anchor/Hitbox"]

[node name="Hurtbox" type="Area2D" parent="Anchor"]
collision_layer = 8
collision_mask = 0
script = ExtResource("5_sweqy")
metadata/_custom_type_script = "uid://qjrnpv4tbvkp"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor/Hurtbox"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_2hs0m")

[node name="StompRayLeft" type="RayCast2D" parent="Anchor"]
position = Vector2(-6, 0)
target_position = Vector2(0, 5)
collision_mask = 8
collide_with_areas = true

[node name="StompRayRight" type="RayCast2D" parent="Anchor"]
position = Vector2(6, 0)
target_position = Vector2(0, 5)
collision_mask = 8
collide_with_areas = true

[node name="StompRayMiddle" type="RayCast2D" parent="Anchor"]
target_position = Vector2(0, 5)
collision_mask = 8
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_aqk2v")

[node name="AnimationPlayerUpper" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b26j0")
}

[node name="AnimationPlayerLower" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sweqy")
}

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_op7ga")
}

[node name="HitHurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_n7ghd")

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_b26j0")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_dw050")

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nvl01")
